--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-# Bot Settings
 
-Prefix= ['','!','.','#','&']
+SESSION_ID=
+
+
+botName=*Mᴏᴏɴ Xᴍᴅ*
+Prefix=.
 timezone=Africa/Harare
-botOwner=Keith
-ownerNumber=263789745277
+ownerNumber=263776509966
